spacing fixes

--- a/website/LESS/body.less
+++ b/website/LESS/body.less
@@ -17,7 +17,6 @@ body {
         background-color: @fontMain;
         @media @max708 {
                 height: 2rem;
-                margin-top: 1rem;
             }
 
         h1 {
